Fixed an issue with switch (the label and control of switch was not getting aligned propperly on small screen)

--- a/Investment Guru/css/control_style.css
+++ b/Investment Guru/css/control_style.css
@@ -241,3 +241,16 @@ input:checked+.slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+.switch-container {
+    margin: 0px;
+    display: flex;
+}
+
+.switch-label {
+    color:#888888;
+}
+
+.checkbox label {
+    padding: 0px 10px;
+}
