--- a/Investment Guru/css/login_style.css
+++ b/Investment Guru/css/login_style.css
@@ -73,11 +73,3 @@ h4 {
     padding: 0;
     text-align: center;
 }
-
-.switch-container {
-    margin: 0px;
-}
-
-.checkbox label {
-    padding: 0px 10px;
-}
